Fixing spacing on sidebar

--- a/styles.css
+++ b/styles.css
@@ -33,11 +33,13 @@ body div {
     border: 1px solid black;
 }
 
+/* Sidebar styling */
 .sidebar {
     background-color: var(--blue);
     grid-row: 1 / span 2; /* not sure why -1 doesn't work for row end */
     display: grid;
-    gap: 30px;
+    grid-template-rows: repeat(3, min-content);
+    gap: 50px;
 }
 
 .sidebar path {
